components/kubearchive/policies/resources/labeled-namespace-toolchain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: labeled-namespace-toolchain
  labels:
    toolchain.dev.openshift.com/type: tenant
