components/kubearchive/policies/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bootstrap-existing-namespaces
policies:
- ../bootstrap-namespace.yaml
resources:
- ../resources/labeled-namespace-konflux.yaml
- ../resources/labeled-namespace-toolchain.yaml
results:
- policy: init-ns-kubearchiveconfig # Namespaced Policy is specified as <namespace>/<name>
  generatedResource: ../resources/expected-kubearchiveconfig-konflux.yaml # when testing a generate rule this field is required.
  kind: Namespace
  resources:
  - labeled-namespace-konflux
  result: pass
  rule: init-ns-kubearchiveconfig # when the policy is a Kyverno policy, this field is required.
- policy: init-ns-kubearchiveconfig # namespaced policy is specified as <namespace>/<name>
  generatedresource: ../resources/expected-kubearchiveconfig-toolchain.yaml # when testing a generate rule this field is required.
  kind: Namespace
  resources:
  - labeled-namespace-toolchain
  result: pass
  rule: init-ns-kubearchiveconfig # when the policy is a kyverno policy, this field is required.
